# internal/models/discord.go
@@ -1,0 +1,5 @@
+package models
+
+type DiscordMessage struct {
+	Template string `json:"template"`
+}
